updated music-journal styles

--- a/MusicJournal/jxsnpiano2/index.html
+++ b/MusicJournal/jxsnpiano2/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is my little studio, tucked away at the corner of the internet.">
+    <meta name="keywords" content="mtch. lofi, lofi, mtch., mtch music, mtch. music">
     <title>mtch's studio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
@@ -20,15 +22,16 @@
                   <b>19/06/23 - jxsnpiano2.proj (WIP)</b>
                 </p>
                 <p>I got sent a little piano loop by my good friend <a href="https://open.spotify.com/artist/7BeumVAbvoeULv5kuq5lhS?si=p3XbA1AZRoCEXfYcSzqUFg" target="_blank" style="color: rgb(111, 186, 236);">jxsn</a>. </p>
-                <br>
-                <img style="vertical-align: sub; margin-right: 0px;" src="/MusicJournal/images/jxsn.webp" class="jxsnicon">
-                <p style="display: inline;">
-                  <b>jxsn</b>
-                </p>
-                <small> - 06/16/2023 11:16 PM</small>
-                </p>
-                <q>hey man, heres a little idea from today - veryy simple but could turn into something haha</q>
-                <br>
+                <div id="discord">
+                  <img style="vertical-align: middle; margin-right: 5px;" src="/MusicJournal/images/jxsn.webp" class="jxsnicon">
+                  <p style="display: inline;">
+                    <b>jxsn</b>
+                  </p>
+                  <small> - 06/16/2023 11:16 PM</small>
+                  </p>
+                  <p>&nbsp;&nbsp;&nbsp; hey man, heres a little idea from today<br> &nbsp;&nbsp;&nbsp; veryy simple but could turn into something haha<br>
+                  </p>
+                </div>
                 <br>
                 <audio controls controlsList="nodownload">"
                   <source src="/MusicJournal/audio/jxsnpiano2/jxsn_progression_63_vpm_Eb.mp3" type="audio/mp3">
@@ -46,7 +49,7 @@
                   <p>&nbsp;&nbsp;&nbsp; love it <br> &nbsp;&nbsp;&nbsp; ill try some things ;) <br>
                   </p>
                 </div>
-                <p>I proceeded to haul my 88 key Artirua Keylab across my room, plug it in, and tinker with some melodies using my custom keyscape preset, appropriately named "mtch intimate piano", and after 40 minutes or so I had ended up with this.</p>
+                <p>I worked on it for about 40 minutes, replaced his piano preset with mine and ended up with this.</p>
                 <audio controls controlsList="nodownload">"
                   <source src="/MusicJournal/audio/jxsnpiano2/jxsnpiano2v1.mp3" type="audio/mp3">
                 </audio>
@@ -71,42 +74,51 @@
                 <p>That's all for now, I exported the stems and sent them out.</p>
                 <p>I'll update when I get stems back.</p>
               </div>
-              <div class="box">
-                <div class="scrollingcontainer">
-                  <!-- to 'widen' the marquee, add more items! -->
-                  <div class="scrolling">
-                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank">Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank">Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank">Instagram</a> ✩
-                  </div>
-                  <div class="scrolling" aria-hidden="true">
-                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank">Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank">Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank">Instagram</a> ✩
-                  </div>
-                  <div class="scrolling" aria-hidden="true">
-                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank">Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank">Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank">Instagram</a> ✩
-                  </div>
-                </div>
+              
             </td>
             <td id="menutd">
               <div class="box" id="links">
-                <a class="navlink" href="/" id="home-link" style="color: white;">📁 Home</a>
+                <h2 style="margin-bottom: 15px; margin-top: 2px; color: rgb(117, 177, 255);">Links</h2>
+                <a class="navlink" href="/" id="home-link">📁 Home</a>
                 <br>
-                <a class="navlink" href="/About/about.html" id="about-link" style="color: white;">📁 About me</a>
+                <a class="navlink" href="/About/about.html" id="about-link">📁 About me</a>
                 <br>
-                <a class="navlink" href="/MusicJournal/index.html" style="color: white;">📁 Music Journal</a>
+                <a class="navlink" href="/MusicJournal/index.html">📁 Music Journal</a>
                 <br>
+              </div>
+              <div class="box" style="margin-top: 10px;margin-bottom: 10px;">
+                <b>Latest Release:</b>
+                <br>
+                <br>
+                <a href="https://open.spotify.com/track/6owxwBYb2JUq8kW9m0IckI?si=6e7480710f9d46fb" id="songlink" target="_blank">
+                  <div id="musicbox">
+                    <img src="/images/findingadventure.jpg" alt="finding adventure album art" width="50" height="50" id="albumcover">
+                    <span id="songname">Adventure <br> Awaits</span>
+                    <span id="artist" style="display: block;">
+                      <small>mtch.</small>
+                    </span>
+                  </div>
+                </a>
+                <span style="color:gray; display: inline-block;">Released 29th May</span>
+                <span style="color:gray; display: inline-block;">
+                  <small>The Jazz Hop Cafe</small>
+                </span>
               </div>
               <div class="box centerbox" style="margin-top: 10px">
-                <img src="/images/duolingo.png" class="duoicon">
-                <p style="display: inline" ;>Duolingo Streak:</p>
+                <img src="/images/duolingo.png" class="duoicon" alt="duolingo streak fire icon">
+                <p style="display: inline" class="gradient-text">Duolingo Streak:</p>
                 <br>
-                <div class="boxcounter"></div>
-                <p style="display: inline;" ;>days</p>
+                <div class="boxcounter">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                <p style="display: inline;">days &nbsp;<img src="/images/fr.png" alt="french flag" style="height: 14px; width: 15px; object-position: 0px 2px; overflow: visible;">
+                </p>
               </div>
-              <div></div>
-    </div>
-    </td>
-    </tr>
-    </tbody>
-    </table>
+              <div class="box" style="margin-top: 10px">
+                <script src="//counter.websiteout.net/js/8/0/0/1"></script>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
