--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
               </div>
               <div class="box" style="margin-top: 10px">
-                <script type="text/javascript" src="//counter.websiteout.net/js/8/0/0/1"></script>
+                <script src="//counter.websiteout.net/js/8/0/0/1"></script>
               </div>
             </td>
           </tr>
