each page now is linked to one sidebar

--- a/MusicJournal/index.html
+++ b/MusicJournal/index.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mtch's studio</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>mtch's studio</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link href="/style.css" rel="stylesheet" type="text/css" media="all" />
+  <script>
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /*loop through a collection of all HTML elements:*/
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain attribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /*make an HTTP request using the attribute value as the file name:*/
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function () {
+            if (this.readyState == 4) {
+              if (this.status == 200) {
+                elmnt.innerHTML = this.responseText;
+              }
+              if (this.status == 404) {
+                elmnt.innerHTML = "Page not found.";
+              }
+              /*remove the attribute, and call this function once more:*/
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
+          };
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /*exit the function:*/
+          return;
+        }
+      }
+    }
+  </script>
 </head>
 
 <body>
+  <div id="container">
+    <table>
+      <tbody>
+        <tr>
+          <td id="maintd">
+            <div class="box" id="mainbox3" style="margin-top: 10px">
+              <img style="vertical-align: sub; margin-right: 5px; display: inline;" src="/images/earthsmol.png"
+                class="earthicon" />
+              <h2 style="display: inline">Music Journal</h2>
+              <div style="display: block; padding-top: 10px" />
+              <a href="/MusicJournal/jxsnpiano2/index.html" class="journallink" style="display: inline">🎵
+                jxsnpiano2.proj</a>
+              <p style="display: inline; font-weight: normal">• 19/06/2023</p>
+              <div />
+            </div>
+          </td>
 
-<div id="container">
-        <table>
-            <tbody>
-                <tr>
-                    <td id="maintd">
-                        
-                        <div class="box" id="mainbox3" style="margin-top: 10px;">
-                            <img style="vertical-align: sub; margin-right: 5px; display: inline;" src="/images/earthsmol.png" class="earthicon">
-                            <h2 style="display:inline">Music Journal</h2>
-
-                            <b style="display: block; padding-top: 10px;">
-                                <a href="/MusicJournal/jxsnpiano2/index.html" class="journallink" style="display: inline;">🎵 jxsnpiano2.proj</a>
-                                <p style="display: inline; font-weight: normal;">• 19/06/2023</p>
-                            </b>
-
-                        </div>
-
-
-                        </div>
-
-                        <div class="box">
-                            <div class="scrollingcontainer">
-                                <!-- to 'widen' the marquee, add more items! -->
-                                <div class="scrolling">
-                                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank" >Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank" >Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank" >Instagram</a> ✩
-                                </div><div class="scrolling" aria-hidden="true">
-                                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank" >Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank" >Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank" >Instagram</a> ✩
-                                </div><div class="scrolling" aria-hidden="true">
-                                    <a href="https://bit.ly/lofimtch" class="class1" target="_blank" >Spotify</a> ✩ <a href="https://bit.ly/mtch-soundcloud" class="class2" target="_blank" >Soundcloud</a> ✩ <a href="https://bit.ly/mtch-insta" class="class3" target="_blank" >Instagram</a> ✩
-                                </div>
-
-                        </div>
-
-                    </td>
-
-                    <td id="menutd">
-                        <div class="box" id="links">
-                            <a class="navlink" href="/" id="home-link" style="color: white;">📁 Home</a>
-                            <br>
-                            <a class="navlink" href="/About/about.html" id="about-link" style="color: white;">📁 About me</a>
-                            <br>
-                            <a class="navlink" href="/MusicJournal/index.html" style="color: white;">📁 Music Journal</a>
-                            <br>
-
-                        </div>
-
-                        <div class="box centerbox" style="margin-top: 10px">
-                            <img src="/images/duolingo.png" class="duoicon">
-                                <p style="display: inline";>Duolingo Streak:</p>
-                                <br>
-                                <div class="boxcounter"></div>
-                                <p style="display: inline;";>days</p>
-
-                        </div>
-
-                        <div>
-
-                        </div>
-
-                    </div>
-                </td>
-
-            </tr>
-        </tbody>
+          <td id="menutd">
+            <div w3-include-html="/content.html"></div>
+          </td>
+        </tr>
+      </tbody>
     </table>
-
-</div>
-
+  </div>
 </body>
+<script>
+  includeHTML();
+</script>
+
 </html>
