new sidebar changes

--- a/MusicJournal/index.html
+++ b/MusicJournal/index.html
@@ -47,22 +47,15 @@
     <table>
       <tbody>
         <tr>
+
           <td id="maintd">
-            <div class="box" id="mainbox3" style="margin-top: 10px">
-              <img style="vertical-align: sub; margin-right: 5px; display: inline;" src="/images/earthsmol.png"
-                class="earthicon" />
-              <h2 style="display: inline">Music Journal</h2>
-              <div style="display: block; padding-top: 10px" />
-              <a href="/MusicJournal/jxsnpiano2/index.html" class="journallink" style="display: inline">🎵
-                jxsnpiano2.proj</a>
-              <p style="display: inline; font-weight: normal">• 19/06/2023</p>
-              <div />
-            </div>
+            <div w3-include-html="/MJcontent.html"></div>
           </td>
 
           <td id="menutd">
             <div w3-include-html="/content.html"></div>
           </td>
+
         </tr>
       </tbody>
     </table>
