--- a/content.html
+++ b/content.html
@@ -43,6 +43,13 @@
       " />
   </p>
 </div>
+
+<div class="box" style="margin-top: 10px">
+  <img src="/images/Spotify_Icon.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
+  <a class="spotifylink" href="https://bit.ly/lofimtch" target="_blank"
+    style="vertical-align: middle;">&nbsp;Spotify</a>
+</div>
+
 <div class="box" style="margin-top: 10px">
   <script src="//counter.websiteout.net/js/8/0/0/1"></script>
 </div>
