--- a/index.html
+++ b/index.html
@@ -79,21 +79,7 @@
                 first EP, which focuses on the waves of life."
               </p>
             </div>
-            <div class="box" id="mainbox3" style="margin-top: 10px">
-              <img style="
-                    vertical-align: sub;
-                    margin-right: 5px;
-                    display: inline;
-                  " src="/images/earthsmol.png" alt="a little earth icon" class="earthicon" />
-              <h2 style="display: inline">Music Journal</h2>
-              <div style="display: block; padding-top: 10px">
-                <a href="/MusicJournal/jxsnpiano2/index.html" class="journallink" style="display: inline"><b>🎵
-                    jxsnpiano2.proj</b></a>
-                <p style="display: inline; font-weight: normal">
-                  • 19/06/2023
-                </p>
-              </div>
-            </div>
+               <div w3-include-html="MJcontent.html"></div>
           </td>
           <td id="menutd">
             <div w3-include-html="content.html"></div>
