added some very real quotes that people have said

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="box" id="mainbox2" style="margin-top: 10px">
               <p>> About Me...</p>
-              <p>
+              <p style="display: none;">
                 Jerah <strong>loves</strong>
                 <red>mushrooms</red> and
                 <green>frogs</green>
@@ -77,9 +77,24 @@
                 After multiple releases with labels such as Lofi Girl, Lofi
                 Jazz Records and Dreamhop Music, ‘mtch.’ is working on his
                 first EP, which focuses on the waves of life."
+                <br>
+                <br>
+                Words can't describe mtch.'s music, but hypothetically if they could this is what they would say:
+                <br>
+                <br>
+                "Within the depths of his artistry, 'mtch.' possesses an innate
+                ability to curate melodic landscapes that transcend time
+                and space, where melodies become portals to ethereal realms, and melodies
+                transport you to a universe beyond musical comprehension" - <i>Taylor Swift</i>
+                <br>
+                <br>
+                "it's aight" - <i>Drake</i>
+                <br>
+                <br>
+                "A very talented young man" - <i>my own mother</i>
               </p>
             </div>
-               <div w3-include-html="MJcontent.html"></div>
+            <div w3-include-html="MJcontent.html"></div>
           </td>
           <td id="menutd">
             <div w3-include-html="content.html"></div>
