--- a/index.html
+++ b/index.html
@@ -52,49 +52,39 @@
           <td id="maintd">
             <div class="box" id="mainbox">
               <h2 style="display: inline">
-                ------------------------ &nbsp;mtch.'s secret studio
-                &nbsp;------------------------
+                ---------------------------- &nbsp; HOMEPAGE
+                &nbsp;---------------------------
               </h2>
               <br />
               <p class="gradient-text2">
-                <b>This is my little studio, tucked away at the corner of the
-                  internet.</b>
+                <b>Penis Penis Penis Penis Penis Penis Penis Penis</b>
               </p>
             </div>
+            
             <div class="box" id="mainbox2" style="margin-top: 10px">
-              <p>> About Me...</p>
-              <p style="display: none;">
-                Jerah <strong>loves</strong>
-                <red>mushrooms</red> and
-                <green>frogs</green>
-              </p>
-              <p>
-                ‘mtch.’ is an 18 y/o lo-fi beat maker/music producer based in
-                Australia. His music creates a relaxing, nostalgic and lush
-                atmosphere perfect for a lazy Sunday or the occasional study
-                session. <br />
-                <br />
-                After multiple releases with labels such as Lofi Girl, Lofi
-                Jazz Records and Dreamhop Music, ‘mtch.’ is working on his
-                first EP, which focuses on the waves of life."
-                <br>
-                <br>
-                Words can't describe mtch.'s music, but hypothetically if they could this is what they would say:
-                <br>
-                <br>
-                "Within the depths of his artistry, 'mtch.' possesses an innate
-                ability to curate melodic landscapes that transcend time
-                and space, where melodies become portals to ethereal realms, and melodies
-                transport you to a universe beyond musical comprehension" - <i>Taylor Swift</i>
-                <br>
-                <br>
-                "it's aight" - <i>Drake</i>
-                <br>
-                <br>
-                "A very talented young man" - <i>my own mother</i>
-              </p>
+              <div class="box" style="margin-top: 10px">
+                <img src="/images/Spotify_Icon.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
+                <a class="spotifylink" href="https://www.youtube.com" target="_blank" style="vertical-align: middle;">&nbsp;Youtube</a>
+              </div>
+              <div class="box" style="margin-top: 10px">
+                <img src="/images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
+                <a class="netflixlink" href="https://www.netflix.com" target="_blank" style="vertical-align: middle;">&nbsp;Netflix</a>
+              </div>
+              <div class="box" style="margin-top: 10px">
+                <img src="/images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
+                <a class="facebooklink" href="https://bit.ly/lofimtch" target="_blank"
+                  style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
+              </div>
+              <div class="box" style="margin-top: 10px">
+                <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
+                <a class="redditlink" href="https://bit.ly/lofimtch" target="_blank"
+                  style="vertical-align: middle;">&nbsp;Reddit</a>
+              </div>
+              <div class="box" style="margin-top: 10px">
+                <img src="/images/Spotify_Icon.png" alt="placeholder icon" style="width: 14px;vertical-align: middle;">
+                <a class="spotifylink" href="https://bit.ly/lofimtch" target="_blank" style="vertical-align: middle;">&nbsp;-placeholder-</a>
+              </div>
             </div>
-            <div w3-include-html="MJcontent.html"></div>
           </td>
           <td id="menutd">
             <div w3-include-html="content.html"></div>
