--- a/index.html
+++ b/index.html
@@ -64,25 +64,21 @@
             <div class="box" id="mainbox2" style="margin-top: 10px">
               <div class="box" style="margin-top: 10px">
                 <img src="/images/Spotify_Icon.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
-                <a class="spotifylink" href="https://www.youtube.com" target="_blank" style="vertical-align: middle;">&nbsp;Youtube</a>
+                <a class="spotifylink" href="https://www.youtube.com" style="vertical-align: middle;">&nbsp;Youtube</a>
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
-                <a class="netflixlink" href="https://www.netflix.com" target="_blank" style="vertical-align: middle;">&nbsp;Netflix</a>
+                <a class="netflixlink" href="https://www.netflix.com" style="vertical-align: middle;">&nbsp;Netflix</a>
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
-                <a class="facebooklink" href="https://bit.ly/lofimtch" target="_blank"
+                <a class="facebooklink" href="https://bit.ly/lofimtch"
                   style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
-                <a class="redditlink" href="https://bit.ly/lofimtch" target="_blank"
+                <a class="redditlink" href="https://bit.ly/lofimtch" 
                   style="vertical-align: middle;">&nbsp;Reddit</a>
-              </div>
-              <div class="box" style="margin-top: 10px">
-                <img src="/images/Spotify_Icon.png" alt="placeholder icon" style="width: 14px;vertical-align: middle;">
-                <a class="spotifylink" href="https://bit.ly/lofimtch" target="_blank" style="vertical-align: middle;">&nbsp;-placeholder-</a>
               </div>
             </div>
           </td>
