--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <td id="maintd">
             <div class="box" id="mainbox">
               <h2 style="display: inline">
-                ---------------------------- &nbsp; HOMEPAGE
-                &nbsp;---------------------------
+                &nbsp;HOMEPAGE
+                &nbsp;
               </h2>
               <br />
               <p class="gradient-text2">
@@ -63,22 +63,21 @@
             
             <div class="box" id="mainbox2" style="margin-top: 10px">
               <div class="box" style="margin-top: 10px">
-                <img src="/images/Spotify_Icon.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
-                <a class="spotifylink" href="https://www.youtube.com" style="vertical-align: middle;">&nbsp;Youtube</a>
+                <img src="/images/youtube.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
+                <a class="ytlink" href="https://www.youtube.com" style="vertical-align: middle;">&nbsp;Youtube</a>
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
                 <a class="netflixlink" href="https://www.netflix.com" style="vertical-align: middle;">&nbsp;Netflix</a>
               </div>
               <div class="box" style="margin-top: 10px">
+                <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
+                <a class="redditlink" href="https://bit.ly/lofimtch" style="vertical-align: middle;">&nbsp;Reddit</a>
+              </div>
+              <div class="box" style="margin-top: 10px">
                 <img src="/images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
                 <a class="facebooklink" href="https://bit.ly/lofimtch"
                   style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
-              </div>
-              <div class="box" style="margin-top: 10px">
-                <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
-                <a class="redditlink" href="https://bit.ly/lofimtch" 
-                  style="vertical-align: middle;">&nbsp;Reddit</a>
               </div>
             </div>
           </td>
