--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
-                <a class="redditlink" href="https://bit.ly/lofimtch" style="vertical-align: middle;">&nbsp;Reddit</a>
+                <a class="redditlink" href="https://www.reddit.com" style="vertical-align: middle;">&nbsp;Reddit</a>
               </div>
               <div class="box" style="margin-top: 10px">
                 <img src="/images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
-                <a class="facebooklink" href="https://bit.ly/lofimtch"
+                <a class="facebooklink" href="https://www.facebook.com/marketplace"
                   style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
               </div>
             </div>
