--- a/content.html
+++ b/content.html
@@ -13,7 +13,7 @@
   <br />
   <a href="https://open.spotify.com/track/6owxwBYb2JUq8kW9m0IckI?si=6e7480710f9d46fb" id="songlink" target="_blank">
     <div id="musicbox">
-      <img src="/images/findingadventure.jpg" alt="finding adventure album art" width="50" height="50"
+      <img src="./images/findingadventure.jpg" alt="finding adventure album art" width="50" height="50"
         id="albumcover" />
       <span id="songname">Adventure <br />
         Awaits</span>
@@ -28,12 +28,12 @@
   </span>
 </div>
 <div class="box centerbox" style="margin-top: 10px">
-  <img src="/images/duolingo.png" class="duoicon" alt="duolingo streak fire icon" />
+  <img src="./images/duolingo.png" class="duoicon" alt="duolingo streak fire icon" />
   <p style="display: inline" class="gradient-text">Duolingo Streak:</p>
   <br />
   <div class="boxcounter">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
   <p style="display: inline">
-    days &nbsp;<img src="/images/fr.png" alt="french flag" style="
+    days &nbsp;<img src="./images/fr.png" alt="french flag" style="
         height: 14px;
         width: 15px;
         object-position: 0px 2px;
