--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="mtch. lofi, lofi, mtch., mtch music, mtch. music" />
   <title>mtch's studio</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  <link href="/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./style.css" rel="stylesheet" type="text/css" media="all" />
   <script>
     function includeHTML() {
       var z, i, elmnt, file, xhttp;
@@ -57,25 +57,25 @@
               </h2>
               <br />
               <p class="gradient-text2">
-                <b>Penis Penis Penis Penis Penis Penis Penis Penis</b>
+                <b></b>
               </p>
             </div>
             
             <div class="box" id="mainbox2" style="margin-top: 10px">
               <div class="box" style="margin-top: 10px">
-                <img src="/images/youtube.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
+                <img src="./images/youtube.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
                 <a class="ytlink" href="https://www.youtube.com" style="vertical-align: middle;">&nbsp;Youtube</a>
               </div>
               <div class="box" style="margin-top: 10px">
-                <img src="/images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
+                <img src="./images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
                 <a class="netflixlink" href="https://www.netflix.com" style="vertical-align: middle;">&nbsp;Netflix</a>
               </div>
               <div class="box" style="margin-top: 10px">
-                <img src="/images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
+                <img src="./images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
                 <a class="redditlink" href="https://www.reddit.com" style="vertical-align: middle;">&nbsp;Reddit</a>
               </div>
               <div class="box" style="margin-top: 10px">
-                <img src="/images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
+                <img src="./images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
                 <a class="facebooklink" href="https://www.facebook.com/marketplace"
                   style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
               </div>
